// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostPopularFeatured should render a full width card with pagination widget if the width is xs or sm 1`] = `
<WithStyles(FeaturedWidget)
  className="wye-MostPopularFeatured"
  classes={Object {}}
  subTitle="Most popular by recent playtime"
  title="Trending"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="wye-MostPopularFeatured__featuredItemContainer featuredItemContainer"
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      className="wye-MostPopularFeatured__featuredItem wye-MostPopularFeatured__featuredItem--fullWidth featuredItem featuredItemFullWidth"
      item={true}
      xs={12}
    >
      <HighlightTrailerQuery
        data={
          Object {
            "appid": "1",
          }
        }
        maxSize={true}
        variant="header"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(PaginationWidget)
    className="wye-MostPopularFeatured__paginationWidget paginationWidget"
    classes={Object {}}
    currentPage={1}
    setCurrentPage={[Function]}
    totalPages={5}
  />
  <Styled(MuiBox)
    className="wye-MostPopularFeatured__quickLinkContainer quickLinkContainer"
    my={4}
  >
    <WithStyles(QuickLink)
      classes={Object {}}
      label="Top 100"
      linkHref="/browse/top100"
    />
  </Styled(MuiBox)>
</WithStyles(FeaturedWidget)>
`;

exports[`MostPopularFeatured should render a full width card with pagination widget if the width is xs or sm 2`] = `
<WithStyles(FeaturedWidget)
  className="wye-MostPopularFeatured"
  classes={Object {}}
  subTitle="Most popular by recent playtime"
  title="Trending"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="wye-MostPopularFeatured__featuredItemContainer featuredItemContainer"
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      className="wye-MostPopularFeatured__featuredItem wye-MostPopularFeatured__featuredItem--fullWidth featuredItem featuredItemFullWidth"
      item={true}
      xs={12}
    >
      <HighlightTrailerQuery
        data={
          Object {
            "appid": "1",
          }
        }
        maxSize={true}
        variant="header"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(PaginationWidget)
    className="wye-MostPopularFeatured__paginationWidget paginationWidget"
    classes={Object {}}
    currentPage={1}
    setCurrentPage={[Function]}
    totalPages={5}
  />
  <Styled(MuiBox)
    className="wye-MostPopularFeatured__quickLinkContainer quickLinkContainer"
    my={4}
  >
    <WithStyles(QuickLink)
      classes={Object {}}
      label="Top 100"
      linkHref="/browse/top100"
    />
  </Styled(MuiBox)>
</WithStyles(FeaturedWidget)>
`;

exports[`MostPopularFeatured should render successfully 1`] = `
<WithStyles(FeaturedWidget)
  className="wye-MostPopularFeatured"
  classes={Object {}}
  subTitle="Most popular by recent playtime"
  title="Trending"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="wye-MostPopularFeatured__featuredItemContainer featuredItemContainer"
    container={true}
    justify="space-between"
  >
    <WithStyles(ForwardRef(Grid))
      className="wye-MostPopularFeatured__featuredItem featuredItem"
      container={true}
      item={true}
      spacing={1}
      xs={6}
    >
      <WithStyles(ForwardRef(Grid))
        className="wye-MostPopularFeatured__featuredItemContent featuredItemContent"
        item={true}
        xs={12}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "1",
            }
          }
          variant="lg"
          withPrice={false}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-MostPopularFeatured__subFeaturedItemsContainer subFeaturedItemsContainer"
      container={true}
      item={true}
      spacing={1}
      xs={6}
    >
      <WithStyles(ForwardRef(Grid))
        className="wye-MostPopularFeatured__subFeaturedItem subFeaturedItem"
        item={true}
        key="2"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "2",
            }
          }
          variant="lg"
          withPrice={false}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="wye-MostPopularFeatured__subFeaturedItem subFeaturedItem"
        item={true}
        key="3"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "3",
            }
          }
          variant="lg"
          withPrice={false}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="wye-MostPopularFeatured__subFeaturedItem subFeaturedItem"
        item={true}
        key="4"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "4",
            }
          }
          variant="lg"
          withPrice={false}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="wye-MostPopularFeatured__subFeaturedItem subFeaturedItem"
        item={true}
        key="5"
        xs={6}
      >
        <HighlightTrailerQuery
          data={
            Object {
              "appid": "5",
            }
          }
          variant="lg"
          withPrice={false}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <Styled(MuiBox)
    className="wye-MostPopularFeatured__quickLinkContainer quickLinkContainer"
    my={4}
  >
    <WithStyles(QuickLink)
      classes={Object {}}
      label="Top 100"
      linkHref="/browse/top100"
    />
  </Styled(MuiBox)>
</WithStyles(FeaturedWidget)>
`;
